# cppindent

./: .gitignore  COPYING  README.md  cppindent.1  meson.build
completions/: cppindent
debian/: changelog  control  copyright  files  rules
src/: formatter.c  formatter.h  io.c  io.h  main.c
